[tool.poetry]
name = "dborm"
version = "0.1.0"
description = ""
authors = ["Carlos Arturo Moreno Tabares <dev@seekingaura.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.4"
pandas = "^2.2.2"

[tool.black]
line-length = 119

[tool.isort]
force_grid_wrap = 2
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
